--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,3 +9,14 @@
   margin-left: 10px;
   padding: 0px;
 }
+
+body.welcome {
+	padding-top: 10%;
+	background: transparent;
+	font-size: 16px;
+	background-image: url("photo.png");
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
