--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,36 +25,33 @@
   </ul>
   </ul>
 </nav>
-<body style="padding-top: 60px">
+<body class="container welcome" style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
     <div class="text-center">
+    <br>
+    <br>
+    <br>
+    <div class="col-md-8 col-md-offset-2 panel panel-default" style="height:50%;">
+    <div class="text-center">
     <h1>Fog City Run</h1>
-    <h2><p>A weekly running race in San Francisco, CA</p></h2>
+    <p>A weekly running race in San Francisco, CA</p>
     <br>
-    <br>
-    <br>
-    <br>
-    <div class="col-md-10 col-md-offset-2" style="height:10%;">
-    <h3>
-    <p class="text-left"><b>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
-    <p class="text-left"><b>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
-    <p class="text-left"><b>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
-    <p class="text-left"><b>&nbsp; What is the course?</b> A hilly 5km(ish) route through the Marina and the Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
-    <p class="text-left"><b>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', races_path %> and on <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
-    <p class="text-left"><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
-    </h3>
+    </div>
+    <div class="text-left">
+    <p><b><i class="fa fa-calendar"></i>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
+    <p><b><i class="fa fa-globe"></i>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
+    <p><b><i class="fa fa-users"></i>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
+    <p><b><i class="fa fa-road"></i>&nbsp; What is the course?</b> A hilly 5km(ish) route in the Marina / Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
+    <p><b><i class="fa fa-bar-chart-o"></i>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to "here", races_path %> </a> and our <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
+    <p><i class="fa fa-suitcase"></i><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
+    <p><a href="http://facebook.com/FogCityRun"><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;Go to our Facebook page. </a></P>
+    </div>
+  </br>
   </div>
   </div>
   </div> <!-- row -->
   <br>
-  <br>
-  <br>
-  <div class="row">
-    <div class="text-center">
-      <a href="https://www.facebook.com/FogCityRun/" class="icon-block"> <i class="fa fa-facebook fa-4x"></i></a>
-    </div>
-  </div>
     <div class="row">
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="col-md-12 " style="height:10%;">
